# scion

./: .gitignore  CLAUDE.md  LICENSE.md  README-AGENT.md  README.md  cluster.toml.example  pyproject.toml
docs/: POLARIS_DEPLOY.md
environments/: boltz_env.py  diffdock_env.py  esm2_env.py  ligandmpnn_env.py
examples/: README.md  embed_basic.py  fold_basic.py  fold_drug_discovery.py  lead_optimization.py  showcase.py
scion/: __init__.py  capabilities.py  cli.py  client.py  cluster_config.py  clusters.py  config.py  cuda_compat.py  designer.py  docker.py  embedder.py  env_lint.py  environment.py  errors.py  folder.py  manifest.py  pep723.py  protocol.py  resources.py  server.py  session.py  worker.py
scion/commands/: __init__.py  check.py  common.py  doctor.py  init.py  install.py  manifest.py  preload.py  resolve.py  serve.py  status.py  sync.py
scripts/: visualize.py
scripts/polaris/: cleanup.sh  demo_fold.py  install.sh  submit_demo.sh
tests/: test_all_envs.py  test_boltz_yaml.py  test_check_hints.py  test_check_thorough.py  test_cluster_config.py  test_cluster_profiles.py  test_cuda_compat.py  test_doctor.py  test_env_lint.py  test_init_seed.py  test_install_preload.py  test_install_uv_config.py  test_new_capabilities.py  test_profile_fallback.py  test_protocol_roundtrip.py  test_session_errors.py  test_sync.py
